<resources>
    <string name="app_name">从从</string>
    <string name="tab_home">影伴</string>
    <string name="tab_market">礼品</string>
    <string name="tab_mine">我的</string>
    <string name="tab_shop">商城</string>
    <string name="tab_st">晒图</string>

    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
