<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="bottom"
             android:background="#ECEDEE" >

    <RadioGroup
        android:id="@+id/RadioG_Bottem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <RadioButton
            android:id="@+id/tab_home"
            style="@style/home_tab"
            android:drawableTop="@drawable/selector_tab_yb"
            android:text="@string/app_name"/>

        <RadioButton
            android:id="@+id/tab_shop"
            style="@style/home_tab"
            android:drawableTop="@drawable/selector_tab_market"
            android:text="@string/tab_shop"/>

        <RadioButton
            android:id="@+id/tab_home_bg"
            style="@style/home_tab"
            android:layout_height="match_parent"
            android:checked="true"

            />

        <RadioButton
            android:id="@+id/tab_st"
            style="@style/home_tab"
            android:drawableTop="@drawable/selector_tab_st"
            android:text="@string/tab_st"/>

        <RadioButton
            android:id="@+id/tab_mine"
            style="@style/home_tab"
            android:drawableTop="@drawable/selector_tab_mine"
            android:text="@string/tab_mine"/>
    </RadioGroup>

</FrameLayout>